docker-compose fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,25 @@ services:
       dockerfile: Dockerfile
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
-      - ./project/backend:/usr/src/app
+      - ./project/backend:/usr/src/
     ports:
       - 8004:8000
+    environment:
+      - ENVIRONMENT=dev
+      - DATABASE_URL=postgres://postgres:postgres@api-db:5432/api_dev
+      - DATABASE_TEST_URL=postgres://postgres:postgres@api-db:5432/api_test
+    depends_on:
+      - api-db
+
+
+  api-db:
+    build:
+      context: ./project/backend/db
+      dockerfile: Dockerfile
+    expose:
+      - 5432
+    ports:
+      - 15432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
