--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,17 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+
+  front:
+    stdin_open: true
+    build:
+      context: ./project/frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./project/frontend:/usr/src/
+      - /usr/src/node_modules
+    ports:
+      - 3007:3000
+    depends_on:
+      - api
