--- a/project/backend/Dockerfile.prod
+++ b/project/backend/Dockerfile.prod
@@ -10,21 +10,16 @@ ENV PYTHONUNBUFFERED 1
 
 #install system depedencies
 RUN apt-get update \
-  && apt-get -y install netcat gcc postgresql \
+  && apt-get -y install netcat \
   && apt-get clean
 
 #install python depedencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
-COPY ./requirements-dev.txt .
-RUN pip install -r requirements-dev.txt
+RUN pip install -r requirements.txt
 
 #add app
 COPY . .
 
 #add entrypoint.sh
-COPY ./entrypoint.sh .
-RUN chmod +x /usr/src/entrypoint.sh
-
-#entrypoint.sh
-ENTRYPOINT ["/usr/src/entrypoint.sh"]
+CMD gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
